--- a/ws/football/src/main/resources/static/css/forum.css
+++ b/ws/football/src/main/resources/static/css/forum.css
@@ -18,6 +18,7 @@ display: flex;
 flex: 1;
 }
 
+/* Navigationsbar */
 .header {
 position: fixed;
 top: 0;
@@ -33,8 +34,6 @@ border-style: solid;
 border-color: #C1A875;
 border-width: 2px;
 }
-
-
 
 .header a {
 width: 125px; 
@@ -144,6 +143,7 @@ transform: translateY(0);
 }
 }
 
+/* Sidebar */
 .sidebar {
 width: 25%;
 height: 1000px;
@@ -186,59 +186,45 @@ align-items: center;
 text-decoration: none;
 }
 
+.sidebar li .text.active {
+    color: #C1A875;
+}
 
 .sidebar li a:hover .text {
 color: #C1A875;
 }
 
 .sidebar li a:hover #icon1 {
-background-image: url("img/homefill.png");
+background-image: url("assets/homefill.png");
 background-size: cover;
 }
 
 .sidebar li a:hover #icon2 {
-background-image: url("img/Angesagtfill.png");
+background-image: url("assets/Angesagtfill.png");
 background-size: cover;
 }
 
 .sidebar li a:hover #icon3 {
-background-image: url("img/icon-uhr-fill.png");
+background-image: url("assets/icon-uhr-fill.png");
 background-size: cover;
 }
 
 .sidebar li a:hover #icon4 {
-background-image: url("img/icon-topic-fill.png");
+background-image: url("assets/icon-topic-fill.png");
 background-size: cover;
 }
-
-
-.strich {
-background-color: #FF0000;
-width: 80%;
-height: 2px;
-margin: 0 auto;
-margin-top: 20px;
-position: relative;
-opacity: 0.5;
-
-}
-
-
 
 #check2 {
 display: none;
 }
 
-
-
 .sidebar-menu {
-
-margin-left: 55px;
-margin-top: 25px;
-color: white;
-font-size: 2rem;
-cursor: pointer;
-display: none;
+    margin-left: 55px;
+    margin-top: 25px;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
 }
 
 .sidebar input[type="checkbox"]:checked ~ .menu-block {
@@ -279,18 +265,17 @@ width: 20rem;
 display: inline;
 
 }
-
 }
 
 .main {
-width: 75%;
-display: flex;
-align-items: center;
-justify-content: center;
-padding: 1em;
-background-color: black;
-margin-left: 25%;
-margin-top: 110px;
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    background-color: black;
+    margin-left: 25%;
+    margin-top: 110px;
 }
 
 @media (max-width: 1100px) {
@@ -300,16 +285,13 @@ width: calc(100% - 100px);
 }
 }
 
-
-
-
 .commentsection {
 text-align: center;
 width: 60%;
 height: 100vh;
 background-color: rgb(10, 10, 10);
 border: 1px solid rgba(80, 80, 80, 0.5);
-
+color: white;
 }
 .comment {
     height: 500px;
@@ -324,7 +306,12 @@ border: 1px solid rgba(80, 80, 80, 0.5);
     height: auto;
 }
 
-
+.comment-section {
+    display: none;
+}
+.comment-section.active {
+    display: block;
+}
 
 
 .button-18 {
