--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -7,12 +7,12 @@
         <title>Document</title>
         <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/forum.css">
     </head>
 
     <body>
         <header class="header">
-            <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
+            <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
             <input type="checkbox" id="check">
             <label for="check" class="menu">
                 <i class="bx bx-menu" id="icon-menu"></i>
@@ -36,51 +36,51 @@
                     <div class="menu-block">
                     <li class="nav-link">
                         <a href="#start" onclick="markActiveLink(1)">
-                            <img src="assets/Home.png" class="sidebar-icon" id="icon1"></i>
+                            <img src="/assets/Home.png" class="sidebar-icon" id="icon1"></i>
                             <span class="text nav-text">Startseite</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#" onclick="markActiveLink(2)">
-                            <img src="assets/Angesagt.png" class="sidebar-icon" id="icon2"></i>
+                            <img src="/assets/Angesagt.png" class="sidebar-icon" id="icon2"></i>
                             <span class="text nav-text">Angesagt</span>
                         </a>
                     </li>
                     <li class="nav-link">
                         <a href="#" onclick="markActiveLink(3)">
-                            <img src="assets/icon-uhr.png" class="sidebar-icon" id="icon3"></i>
+                            <img src="/assets/icon-uhr.png" class="sidebar-icon" id="icon3"></i>
                             <span class="text nav-text">Zuletzt geteilt</span>
                         </a>
                     </li>
                     <!-- <div class="strich">
                     </div> //-->
                     <li class="nav-link">
-                        <a href="#" onclick="openTopic(1); markActiveLink(4)">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                        <a href="#1" onclick="openTopic(1); markActiveLink(4)">
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 1</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#" onclick="openTopic(2); markActiveLink(5)">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                        <a href="#2" onclick="openTopic(2); markActiveLink(5)">
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 2</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#" onclick="openTopic(3); markActiveLink(6)">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                        <a href="#3" onclick="openTopic(3); markActiveLink(6)">
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 3</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#" onclick="openTopic(4); markActiveLink(7)">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                        <a href="#4" onclick="openTopic(4); markActiveLink(7)">
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 4</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#" onclick="openTopic(5); markActiveLink(8)">
-                            <img src="assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
+                        <a href="#5" onclick="openTopic(5); markActiveLink(8)">
+                            <img src="/assets/icon-topic.png" class="sidebar-icon" id="icon4"></i>
                             <span class="text nav-text">Topic 5</span>
                         </a>
                     </li>
@@ -95,7 +95,7 @@
                     <div class="content" id="content">
                         <div class="commentbox">
                             <div class="userimage">
-                                <img src="assets/user.png" class="userimage">
+                                <img src="/assets/user.png" class="userimage">
                             </div>
                             <div class="commentinput">
                                 <textarea type="text" id="userComment" placeholder="Was gibt's Neues?!" class="usercomment"></textarea>
@@ -105,13 +105,13 @@
                         <div class="bottomsection">
                             <div class="icons">
                                 <button id="uploadButton" title="Upload Photo">
-                                    <img src="assets/popup-gallery.png" alt="Upload Image">
+                                    <img src="/assets/popup-gallery.png" alt="Upload Image">
                                 </button>
                                 <p id="uploadMessage" style="display: none;">Es kann nur ein Foto hochgeladen werden</p>
                                 <input type="file" id="fileInput" accept="image/*" style="display:none">
                             </div>
                             <div class="post-button">
-                                <button class="button-18" onclick="postComment(currentTopicId)">Posten</button>
+                                <button class="button-18" onclick="postComment()">Posten</button>
                             </div>
                         </div>
                         <div class="close-btn" onclick="togglePopup()">&times;
@@ -144,6 +144,6 @@
                     </div>
                 </main>
             </div>     
-            <script src="test.js"></script>
+            <script src="/js/forum.js"></script>
     </body>
     </html>
