--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="final-stadien.css">
+    <link rel="stylesheet" href="/css/stadien.css">
 </head>
 <body>
     <header class="header" id="header">
-        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -35,7 +35,7 @@
                 <a href="#berlin" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="assets/olympiastadion2.jpeg" class="image">
+        <img src="/assets/olympiastadion2.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -159,7 +159,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/berlin-stadion-außen.webp">
+                <img src="/assets/berlin-stadion-außen.webp">
             </div>
 
             <div class="container2" id="text-maps">
@@ -211,7 +211,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/bayern-stadion-außen.jpeg">
+                <img src="/assets/bayern-stadion-außen.jpeg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -263,7 +263,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/dortmund-stadion-außen.jpg">
+                <img src="/assets/dortmund-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -314,7 +314,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/hamburg-stadion-außen.jpg">
+                <img src="/assets/hamburg-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -365,7 +365,7 @@
                 </div>
     
                 <div class="container2" id="text-bild">
-                    <img src="assets/frankfurt-stadion-außen.jpg">
+                    <img src="/assets/frankfurt-stadion-außen.jpg">
                 </div>
     
                 <div class="container2" id="text-maps">
@@ -415,7 +415,7 @@
                 </div>
     
                 <div class="container2" id="text-bild">
-                    <img src="assets/gelsenkirchen-stadion-außen.jpg">
+                    <img src="/assets/gelsenkirchen-stadion-außen.jpg">
                 </div>
     
                 <div class="container2" id="text-maps">
@@ -465,7 +465,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/leipzig-stadion-außen.jpg">
+                <img src="/assets/leipzig-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -516,7 +516,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/düsseldorf-stadion-außen.jpg">
+                <img src="/assets/düsseldorf-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -567,7 +567,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="assets/köln-stadion-außen.jpg">
+                <img src="/assets/köln-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -599,7 +599,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgh-8kfZs-BwEUXp1gyQaQ_eFxr7TtsDQ&callback=initMap&libraries=marker&v=beta"
     defer>
 </script>
-<script src="final-stadien.js"></script>
+<script src="/js/stadien.js"></script>
 
 </body>
 </html>
