--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -6,12 +6,285 @@
     <title>Document</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
 </head>
+
+<style>
+    * {
+        font-family: "Rubik", sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background: url('/assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
+        background-size: cover;
+        background-position: center;;
+    }
+
+    .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    height: 110px;
+}
+
+.header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255, .15);
+    backdrop-filter: blur(50px);
+    z-index: -1;
+}
+
+.header a {
+    width: 125px; 
+    height: 83px;
+}
+
+.logo {
+    width: 100%;
+}
+
+
+.navbar {
+display: block;
+margin-right: 20px;
+}
+
+.navbar a {
+position: relative;
+font-size: 1.15rem;
+color: white;
+text-decoration: none;
+font-weight: 500;
+margin-left: 2.5rem;
+transition: .50s ease;
+font-size: 20px;
+
+}
+
+.navbar a::before {
+    padding-right: 0px;
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #C1A875;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.navbar a:hover::before {
+  transform: scaleX(1);
+}
+
+#check {
+display: none;
+}
+
+.menu {
+position: absolute;
+right: 5%;
+color: white;
+font-size: 2rem;
+cursor: pointer;
+display: none;
+}
+
+@media (max-width: 992px) {
+.header {
+    padding: 1.3rem 5%;
+    background-color: transparent;
+}
+}
+
+@media (max-width: 854px) {
+.menu {
+    display: inline-flex;
+}
+#check:checked ~ .menu #icon-menu {
+display: none;
+}
+.menu #close-menu {
+display: none;
+}
+#check:checked ~ .menu #close-menu {
+display: block;
+}
+.navbar {
+position: absolute;
+top: 100%;
+left: 0%;
+width: 100%;
+height: 0;
+background: rgb(255, 255, 255, .15);
+backdrop-filter: blur(50px);
+overflow: hidden;
+transition: .2s ease;
+
+}
+#check:checked ~ .navbar {
+height: 20rem;
+}
+.navbar a {
+display: block;
+height: 35px;
+margin: 1.5rem auto;
+text-align: center;
+transition: -2s ease;
+font-size: 20px;
+
+}
+#check:checked ~ .navbar a{
+    transform: translateY(0);
+}
+}
+
+.wrapper {
+    display: flex;
+    position: relative;
+    width: 420px;
+    height: 420px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255, .2);
+    backdrop-filter: blur(20px);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+    align-items: center;
+    justify-content: center;
+    transition: height .2s ease;
+    overflow: hidden;
+}
+
+.wrapper.active {
+    height: 520px;
+}
+
+.form-box {
+    flex: 1;
+}
+
+.wrapper h1 {
+    font-size: 36px;
+    text-align: center;
+}
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255,255,255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+.input-box input::placeholder {
+    color: #fff;
+}
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0,0,0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+.wrapper .link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.link p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+.link p a:hover {
+    text-decoration: underline;
+}
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.wrapper .form-box.register {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.checkbox {
+    font-size: .9em;
+    color: #fff;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+.checkbox label input {
+    accent-color: #fff;
+    text-decoration: none;
+}
+.checkbox-warning {
+    color: #C1A875;
+}
+
+</style>
 
 <body>
     <header class="header">
-        <a href="#"><img src="assets/Logo.png" class="logo"></a>
+        <a href="#"><img src="/assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -45,30 +318,28 @@
             </div>
         </form>
 
-        <form class="form-box register">
+        <form class="form-box register" id="registerForm">
             <h1>Registrieren</h1>
             <div class="input-box">
-                <input type="text" placeholder="Benutzername"
-                required>
+                <input type="text" name="username" placeholder="Benutzername" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="email" placeholder="Email"
-                required>
-                <i class='bx bxs-envelope' style='color:#ffffff'  ></i>
+                <input type="email" name="email" placeholder="Email" required>
+                <i class='bx bxs-envelope' style='color:#ffffff'></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Passwort"
-                required>
+                <input type="password" name="password" placeholder="Passwort" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="checkbox">
-                <label id="label"><input type="checkbox" id="checkbox">  Ich stimme den Nutzungsbedingungen zu</label>
+                <label id="label">
+                    <input type="checkbox" id="checkbox"> Ich stimme den Nutzungsbedingungen zu
+                </label>
             </div>
             <button type="submit" class="btn" id="button">Registrieren</button>
             <div class="link login-link">
-                <p>Du hast bereits einen Account? <a
-                href="#">Login</a></p>
+                <p>Du hast bereits einen Account? <a href="#">Login</a></p>
             </div>
         </form>
     </div>
