--- a/ws/football/src/main/resources/templates/forum.html
+++ b/ws/football/src/main/resources/templates/forum.html
@@ -111,7 +111,7 @@
                                 <input type="file" id="fileInput" accept="image/*" style="display:none">
                             </div>
                             <div class="post-button">
-                                <button class="button-18" onclick="postComment()">Posten</button>
+                                <button class="button-18" onclick="postComment();togglePopup()">Posten</button>
                             </div>
                         </div>
                         <div class="close-btn" onclick="togglePopup()">&times;
