--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -41,34 +41,32 @@
             <button type="submit" class="btn">Login</button>
             <div class="link register-link">
                 <p>Du hast noch keinen Account? <a
-                href="#">Registrieren</a></p>
+                href="#register">Registrieren</a></p>
             </div>
         </form>
-
-        <form class="form-box register">
+        
+        <form class="form-box register" id="registerForm">
             <h1>Registrieren</h1>
             <div class="input-box">
-                <input type="text" placeholder="Benutzername"
-                required>
+                <input type="text" name="username" placeholder="Benutzername" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="email" placeholder="Email"
-                required>
-                <i class='bx bxs-envelope' style='color:#ffffff'  ></i>
+                <input type="email" name="email" placeholder="Email" required>
+                <i class='bx bxs-envelope' style='color:#ffffff'></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Passwort"
-                required>
+                <input type="password" name="password" placeholder="Passwort" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="checkbox">
-                <label id="label"><input type="checkbox" id="checkbox">  Ich stimme den Nutzungsbedingungen zu</label>
+                <label id="label">
+                    <input type="checkbox" id="checkbox"> Ich stimme den Nutzungsbedingungen zu
+                </label>
             </div>
             <button type="submit" class="btn" id="button">Registrieren</button>
             <div class="link login-link">
-                <p>Du hast bereits einen Account? <a
-                href="#">Login</a></p>
+                <p>Du hast bereits einen Account? <a href="#">Login</a></p>
             </div>
         </form>
     </div>
