--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -26,15 +26,15 @@
         </nav>
         </header>
     <div class="wrapper">
-        <form class="form-box login">
+        <form class="form-box login" id="loginForm">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Benutzername"
+                <input type="text" name="username" placeholder="Benutzername"
                 required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Passwort"
+                <input type="text" name="password" placeholder="Passwort"
                 required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
